--- a/sass/components/page-index/_backdrop.scss
+++ b/sass/components/page-index/_backdrop.scss
@@ -7,6 +7,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  z-index: 2;
   padding: 93px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity $cubic;
@@ -20,6 +21,7 @@
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
+    z-index: -1;
     &.modal-window {
       opacity: 0;
     }
