--- a/sass/components/page-index/_clients-section.scss
+++ b/sass/components/page-index/_clients-section.scss
@@ -14,6 +14,7 @@
 .clients__link {
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 90px;
   width: calc((100vw - 4 * 15px) / 2);
   border: 1px solid $third_color;
@@ -34,7 +35,4 @@
   @media screen and (min-width: 1200px) {
     width: calc((1200px - 12 * 30px) / 6);
   }
-}
-.clients__logo {
-  margin: 0 auto;
 }
