--- a/sass/components/page-portfolio/_products.scss
+++ b/sass/components/page-portfolio/_products.scss
@@ -48,13 +48,16 @@
 }
 .products__overlay {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 12px;
   top: 0;
   left: 0;
   opacity: 0;
   transform: translateY(100%);
   height: 100%;
   width: 100%;
-  padding: 4px;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.56;
@@ -63,13 +66,13 @@
   background-color: rgba(33, 150, 243, 0.9);
   transition: transform $cubic, opacity $cubic;
   @media screen and (min-width: 480px) and (max-width: 767px) {
-    padding: 77px 24px;
+    padding: 0 24px;
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    padding: 49px 24px;
+    padding: 0 24px;
   }
   @media screen and (min-width: 1200px) {
-    padding: 63px 24px;
+    padding: 0 24px;
   }
 }
 .products__label {
