--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -43,7 +43,7 @@
   }
 }
 .address__item {
-  &:not(&:last-child) {
+  &:not(:last-child) {
     margin-bottom: 8px;
     @media screen and (min-width: 1200px) {
       margin-bottom: 9px;
