--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -13,7 +13,7 @@
   align-items: center;
 }
 .navigation__item {
-  &:not(&:last-child) {
+  &:not(:last-child) {
     margin-right: 50px;
   }
 }
@@ -57,12 +57,14 @@
   }
 }
 .header-contacts__item {
-  &:first-child {
-    margin-bottom: 10px;
+  @media screen and (max-width: 1199px) {
+    &:first-child {
+      margin-bottom: 10px;
+    }
   }
   @media screen and (min-width: 1200px) {
     &:first-child {
-      margin: 0 30px 0 0;
+      margin-right: 30px;
     }
   }
 }
