--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -117,7 +117,7 @@
     width: 100%;
   }
 }
-.main-button.footer-submit-button {
+.footer-submit-button {
   display: flex;
   align-items: center;
   padding: 9px 28px;
