--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,12 +2,14 @@
 @import './utils/variables';
 @import './base';
 @import './utils/visually-hidden';
+@import './components/socials';
+
+// Header
 @import './components/page-header';
 @import './components/logo';
 @import './components/navigation';
 @import './components/mobile-menu';
-@import './components/socials';
-@import './components/footer';
+
 // page index.html
 @import './components/page-index/hero-section';
 @import './components/page-index/advantages-section';
@@ -16,6 +18,10 @@
 @import './components/page-index/clients-section';
 @import './components/page-index/backdrop';
 @import './components/page-index/modal-window';
+
 // page portfolio.html
 @import './components/page-portfolio/filters';
 @import './components/page-portfolio/products';
+
+// Footer
+@import './components/footer';
