--- a/css/main.css
+++ b/css/main.css
@@ -1014,7 +1014,6 @@ svg {
 }
 
 .modal-form__field {
-  position: relative;
   margin-bottom: 10px;
 }
 
@@ -1025,6 +1024,10 @@ svg {
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: #757575;
+}
+
+.input__wrapper {
+  position: relative;
 }
 
 .modal-form__input {
@@ -1046,8 +1049,10 @@ svg {
 
 .modal-form__icon {
   position: absolute;
-  top: 28px;
+  top: 50%;
   left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
