--- a/sass/components/page-index/_modal-window.scss
+++ b/sass/components/page-index/_modal-window.scss
@@ -94,6 +94,7 @@
   margin-bottom: 30px;
 }
 .agreement__icon {
+  cursor: pointer;
   border: 2px solid $first_color;
   border-radius: 2px;
   background-color: $white_color;
