--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,9 +7,11 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
   }
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
+    justify-content: flex-start;
   }
 }
 .footer-address-container {
@@ -57,7 +59,7 @@
   margin-bottom: 60px;
   text-align: center;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    margin-left: auto;
+    margin-left: 165px;
   }
   @media screen and (min-width: 1200px) {
     margin: 0;
