--- a/css/main.css
+++ b/css/main.css
@@ -367,7 +367,7 @@ svg {
   pointer-events: none;
   margin: 0;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: #fff;
 }
 
 .mobile-menu-backdrop.is-open {
@@ -389,17 +389,6 @@ svg {
   margin: 0;
   padding: 48px 15px;
   background-color: #fff;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-}
-
-.mobile-menu-backdrop.is-open .mobile-menu {
-  -webkit-transform: translateX(0%);
-          transform: translateX(0%);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
